# mcp-llm-experiment

./: .gitignore  README.md  flight_tracker_app.py  pyproject.toml  requirements-web.txt  run_flight_tracker.py
mcp_server/: __init__.py
mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/mcp_server/: server.py
